--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
             <i class="fab fa-whatsapp"></i>
         </a>
     </div>
+    <footer>
+        <p>&copy; 2024 Programador Demo. Todos os direitos reservados.</p>
+    </footer>
+    
 </body>
 
 <script src="script.js"></script>
