--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </a>
     </div>
     <footer>
-        <p>&copy; 2024 Programador Demo. Todos os direitos reservados.</p>
+        <p>&copy; 2024 Programador Demo.</p>
     </footer>
     
 </body>
